# Edge_Wind-STM32H7-FreeRTOS-LVGL-ESP32

./: .gitignore  EDGEWIND_SUBPROJECTS_MERGE_CONTEXT.md  EDGEWIND_THREE_PROJECTS_CONTEXT.md  大学生创新创业项目基于边缘计算的风电场直流系统故障监测.docx
EdgeWind_Client/: EdgeWind_Client.spec  build_client.bat  edgewind_client.env  installer_client.iss  run_client.py
EdgeWind_Desktop/: .env.example  EdgeWind_Admin.spec  build_windows.bat  installer.iss  make_icon.py  run_desktop.py
Edge_Wind_System/: .gitignore  LICENSE  README.md  app.py  edgewind_ctl.bat  env.example  gunicorn_config.py  requirements.txt  sim.py  sim_ctl.bat  wsgi.py  提交到GitHub.bat  服务器开关.bat  模拟器开关.bat  添加防火墙规则.bat
Edge_Wind_System/docs/: 局域网访问指南.md  阿里云部署实现详解.md
Edge_Wind_System/edgewind/: __init__.py  config.py  full_frame_binary.py  knowledge_graph.py  models.py  report_generator.py  socket_events.py  time_utils.py  utils.py
STM32H7+FreeRTOS+LVGL+ESP32/: .gitignore  .mxproject  ESP8266_Logic_and_ESP32_WROOM32E_UE_Migration_Assessment.md  ESP8266操作.HTML  PROJECT_OVERVIEW.md  README.md  STM32H750XBH6.ioc  主界面.HTML  参数配置.HTML
esp32_spi_coprocessor/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp32_spi_coprocessor/main/: CMakeLists.txt  app_config.c  app_config.h  app_config_private.example.h  app_types.h  board_pins.h  board_support.c  board_support.h  cloud_client.c  cloud_client.h  comm_protocol.c  comm_protocol.h  main.c  report_buffer.c  report_buffer.h  report_codec.c  report_codec.h  spi_link.c  spi_link.h  wifi_manager.c  wifi_manager.h
tools/: monitor_three_end_verify.py
(+154 files in other folders)
